# rust-embedding-lambda

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
scripts/: clean_slate.sh  create_ecr_repo.sh  create_function_url.sh  create_iam_role.sh  create_lambda_function.sh  deploy_function.sh  install.sh  simple_benchmark.sh  test_data_long.json  test_data_medium.json  test_data_short.json  test_with_iam.sh
src/: embedder.rs  error.rs  http_handler.rs  main.rs
