[package]
name = "embedding-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.1"
tokio = { version = "1.48.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ndarray = "0.17.1"
tokenizers = "0.22.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0"

# Platform-specific ONNX Runtime configuration
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = [
    "ndarray",
    "std",
    "download-binaries",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = [
    "ndarray",
    "std",
    "load-dynamic",
] }

[profile.release]
opt-level = 3     # Optimize for speed (ARM64 benefits more from speed optimizations)
lto = "fat"       # Full link-time optimization across all crates
codegen-units = 1 # Better optimization, slower compile
strip = true      # Strip symbols
panic = "abort"   # Abort on panic for FFI safety

# Alternative profile optimized for smaller binary size (faster cold starts)
# Use with: cargo build --profile release-size
[profile.release-size]
inherits = "release"
opt-level = "z"   # Optimize for size
lto = true
